feat: implement multi-tenancy support, improve logging, and refactor playoff bracket generation logic